force-app/main/default/objects/TPH_Nodes__c/TPH_Nodes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Using to store Third Party Hardware nodes count</description>
    <label>TPH Nodes</label>
</CustomObject>