force-app/main/default/objects/TPH_Nodes__c/fields/Nodes_Count__c.field-meta.xml
<CustomField>
    <fullName>Nodes_Count__c</fullName>
    <label>Nodes Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>