force-app/main/default/objects/TPH_Nodes__c/fields/TPH_Model__c.field-meta.xml
<CustomField>
    <fullName>TPH_Model__c</fullName>
    <inlineHelpText>Enter TPH Model Gen</inlineHelpText>
    <label>TPH Model</label>
    <length>20</length>
    <type>Text</type>
</CustomField>