force-app/main/default/objects/TPH_Nodes__c/fields/TPH_OEM__c.field-meta.xml
<CustomField>
    <fullName>TPH_OEM__c</fullName>
    <inlineHelpText>Enter OEM Name</inlineHelpText>
    <label>TPH OEM</label>
    <length>20</length>
    <type>Text</type>
</CustomField>