force-app/main/default/objects/TPH_Nodes__c/fields/TPH_OEM_Model__c.field-meta.xml
<CustomField>
    <fullName>TPH_OEM_Model__c</fullName>
    <inlineHelpText>Enter in &quot;OEM-Model&quot; pattern. Eg: DELL-C6420</inlineHelpText>
    <label>TPH OEM-Model</label>
    <length>50</length>
    <type>Text</type>
</CustomField>